addd yaml files

--- a/Deployment.yaml
+++ b/Deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: webapp
-          image: ramapemmasani/k8s-jenkins-ansible
+          image: ramapemmasani/k8s-jenkins-ansible:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 80
