--- a/ansible.yaml
+++ b/ansible.yaml
@@ -19,10 +19,19 @@
 
   vars:
     # Use variables for file paths to make the playbook more maintainable
-    deployment_file: /home/rama/Deployment.yaml
-    service_file: /home/rama/Service.yaml
+    deployment_file: /home/ubuntu/Deployment.yaml
+    service_file: /home/ubuntu/Service.yaml
 
   tasks:
+    - name: Ensure the required Python libraries are installed
+      # The `pip` module is used to install Python packages.
+      # This task ensures the 'kubernetes' library is present on the remote host,
+      # which is a dependency for the kubernetes.core.k8s module.
+      pip:
+        name: kubernetes
+        state: present
+        executable: pip3  # Specify pip3 to use the correct Python interpreter
+
     - name: Apply Kubernetes Deployment
       # The kubernetes.core.k8s module is the recommended way to interact with Kubernetes
       # It is idempotent, meaning it only makes changes when necessary.
